--- a/app/globals.css
+++ b/app/globals.css
@@ -47,75 +47,144 @@ body {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --font-mono: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+  --font-serif: Georgia, serif;
+  --radius: 1.675rem;
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --tracking-normal: var(--tracking-normal);
+  --shadow-2xl: var(--shadow-2xl);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-md: var(--shadow-md);
+  --shadow: var(--shadow);
+  --shadow-sm: var(--shadow-sm);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-2xs: var(--shadow-2xs);
+  --spacing: var(--spacing);
+  --letter-spacing: var(--letter-spacing);
+  --shadow-offset-y: var(--shadow-offset-y);
+  --shadow-offset-x: var(--shadow-offset-x);
+  --shadow-spread: var(--shadow-spread);
+  --shadow-blur: var(--shadow-blur);
+  --shadow-opacity: var(--shadow-opacity);
+  --color-shadow-color: var(--shadow-color);
+  --color-destructive-foreground: var(--destructive-foreground);
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --radius: 1.675rem;
+  --background: oklch(1.0000 0 0);
+  --foreground: oklch(0.2046 0 0);
+  --card: oklch(1.0000 0 0);
+  --card-foreground: oklch(0.2046 0 0);
+  --popover: oklch(1.0000 0 0);
+  --popover-foreground: oklch(0.2046 0 0);
+  --primary: oklch(0.2046 0 0);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.9551 0 0);
+  --secondary-foreground: oklch(0.2046 0 0);
+  --muted: oklch(0.9551 0 0);
+  --muted-foreground: oklch(0.5555 0 0);
+  --accent: oklch(0.9551 0 0);
+  --accent-foreground: oklch(0.2046 0 0);
+  --destructive: oklch(0.6368 0.2078 25.3313);
+  --border: oklch(0.9276 0.0058 264.5313);
+  --input: oklch(1.0000 0 0);
+  --ring: oklch(0.8699 0 0);
+  --chart-1: oklch(0.6368 0.2078 25.3313);
+  --chart-2: oklch(0.7049 0.1867 47.6044);
+  --chart-3: oklch(0.7686 0.1647 70.0804);
+  --chart-4: oklch(0.7952 0.1617 86.0468);
+  --chart-5: oklch(0.7681 0.2044 130.8498);
+  --sidebar: oklch(1.0000 0 0);
+  --sidebar-foreground: oklch(0.2046 0 0);
+  --sidebar-primary: oklch(0.2046 0 0);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.9551 0 0);
+  --sidebar-accent-foreground: oklch(0.2046 0 0);
+  --sidebar-border: oklch(0.9276 0.0058 264.5313);
+  --sidebar-ring: oklch(0.8699 0 0);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --font-serif: Georgia, serif;
+  --font-mono: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+  --shadow-color: #000000;
+  --shadow-opacity: 0;
+  --shadow-blur: 0.25rem;
+  --shadow-spread: 0.0625rem;
+  --shadow-offset-x: -5px;
+  --shadow-offset-y: 0.0625rem;
+  --letter-spacing: 0rem;
+  --spacing: 0.25rem;
+  --shadow-2xs: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00);
+  --shadow-xs: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00);
+  --shadow-sm: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 1px 2px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 1px 2px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow-md: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 2px 4px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow-lg: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 4px 6px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow-xl: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 8px 10px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow-2xl: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00);
+  --tracking-normal: 0rem;
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --background: oklch(0 0 0);
+  --foreground: oklch(1.0000 0 0);
+  --card: oklch(0 0 0);
+  --card-foreground: oklch(1.0000 0 0);
+  --popover: oklch(0 0 0);
+  --popover-foreground: oklch(1.0000 0 0);
+  --primary: oklch(1.0000 0 0);
+  --primary-foreground: oklch(0 0 0);
+  --secondary: oklch(0.2178 0 0);
+  --secondary-foreground: oklch(1.0000 0 0);
+  --muted: oklch(0.2178 0 0);
+  --muted-foreground: oklch(0.7058 0 0);
+  --accent: oklch(0.2178 0 0);
+  --accent-foreground: oklch(1.0000 0 0);
+  --destructive: oklch(0.5771 0.2152 27.3250);
+  --border: oklch(0.2686 0 0);
+  --input: oklch(0 0 0);
+  --ring: oklch(0.3715 0 0);
+  --chart-1: oklch(0.5771 0.2152 27.3250);
+  --chart-2: oklch(0.6461 0.1943 41.1158);
+  --chart-3: oklch(0.6658 0.1574 58.3183);
+  --chart-4: oklch(0.6806 0.1423 75.8340);
+  --chart-5: oklch(0.6482 0.1754 131.6839);
+  --sidebar: oklch(0 0 0);
+  --sidebar-foreground: oklch(1.0000 0 0);
+  --sidebar-primary: oklch(1.0000 0 0);
+  --sidebar-primary-foreground: oklch(0 0 0);
+  --sidebar-accent: oklch(0.2178 0 0);
+  --sidebar-accent-foreground: oklch(1.0000 0 0);
+  --sidebar-border: oklch(0.2686 0 0);
+  --sidebar-ring: oklch(0.3715 0 0);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --radius: 1.675rem;
+  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --font-serif: Georgia, serif;
+  --font-mono: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+  --shadow-color: #000000;
+  --shadow-opacity: 0;
+  --shadow-blur: 0.25rem;
+  --shadow-spread: 0.0625rem;
+  --shadow-offset-x: -5px;
+  --shadow-offset-y: 0.0625rem;
+  --letter-spacing: 0rem;
+  --spacing: 0.25rem;
+  --shadow-2xs: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00);
+  --shadow-xs: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00);
+  --shadow-sm: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 1px 2px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 1px 2px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow-md: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 2px 4px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow-lg: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 4px 6px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow-xl: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00), -5px 8px 10px -0.9375px hsl(0 0% 0% / 0.00);
+  --shadow-2xl: -5px 0.0625rem 0.25rem 0.0625rem hsl(0 0% 0% / 0.00);
 }
 
 @layer base {
@@ -124,5 +193,6 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+    letter-spacing: var(--tracking-normal);
   }
 }
